Revision history for Perl module Chatbot::Eliza

1.05_01 2014-04-05
    - Moved Chatbot/Eliza.pm to lib/Chatbot/Eliza.pm
    - Added this Changes file; moved changelog entries from pod to here.
    - Moved all example scripts into examples/ directory

1.04 2003-01-24
    - Added a Norwegian script, kindly contributed by Mats Stafseng Einarsen.
      Thanks Mats!

1.01 2003-01-17
    - Added an empty DESTORY method, to eliminate some pesky warning messages.
      Suggested by Stas Bekman.

0.97 1999-10-31
    - One tiny change to the regex which implements reassemble rules.
      Thanks to Gidon Wise for suggesting this improvement.

0.95 1999-07-09
    - Fixed a bug in the way the bot invokes its random function
      when it pulls a comment out of memory.

0.93 1999-06-04
    - Calling programs can now specify their own random-number generators.
      Use this syntax:
            $chatbot = new Chatbot::Eliza;
            $chatbot->myrand( sub { #function goes here!  } );
      The custom random function should have the same prototype
      as perl's built-in rand() function.  That is, it should take
      a single (numeric) expression as a parameter, and it should
      return a floating-point value between 0 and that number.
    - You can also now use a reference to an anonymous hash
      as a parameter to the new() method to define any fields
      in that bot instance:
            $bot = new Chatbot::Eliza {
                name       => "Brian",
                scriptfile => "myscript.txt",
                debug      => 1,
            };

0.91 1999-04-08
    - Fixed some misspellings.
    - Fixed a bug in the way individual bot objects store their memory.
      Thanks to Randal Schwartz and to Robert Chin for pointing this out.
    - Fixed a very stupid error in the way the random function is invoked.
      Thanks to Antony Quintal for pointing out the error.
    - Many corrections and improvements were made to the German script