@@ -4,6 +4,7 @@ Revision history for Perl module Chatbot::Eliza
     - Moved Chatbot/Eliza.pm to lib/Chatbot/Eliza.pm
     - Added this Changes file; moved changelog entries from pod to here.
     - Moved all example scripts into examples/ directory
+    - Added a minimal test that actually exercises Eliza with a script
 
 1.04 2003-01-24
     - Added a Norwegian script, kindly contributed by Mats Stafseng Einarsen.
